--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ table {
       height: 20px;
       width: 20px;
       border-radius: 50%;
-      background-color: gray;
+      background-color: #DEB887;
       top: 0px;
     }
     .timeline ul li:nth-child(odd)::before {
@@ -335,7 +335,7 @@ table {
       top: -30px;
     }
     .timeline ul li:hover::before {
-      background-color: aqua;
+      background-color: blue;
     }
   }
   
@@ -478,12 +478,14 @@ table {
 /* contact section styling */
 
 .contact .contact-content .column{
-    width: calc(50% - 30px);
+    margin-top: 10px;
+    width: calc(50% - 20px);
 }
 .contact .contact-content .text{
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 10px;
+    text-decoration: blue;
 }
 .contact .contact-content .left p{
     text-align: justify;
@@ -501,73 +503,17 @@ table {
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: #1E90FF;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
 }
 .contact .contact-content .info .sub-title{
-    color: #333;
+    color: blue;
 }
-.contact .right form .fields{
-    display: flex;
-}
-.contact .right form .field,
-.contact .right form .fields .field{
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-.contact .right form .textarea{
-    height: 80px;
-    width: 100%;
-}
-.contact .right form .name{
-    margin-right: 10px;
-}
-.contact .right form .field input,
-.contact .right form .textarea textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.3s ease;
-}
-.contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
-    border-color: #b3b3b3;
-}
-.contact .right form .textarea textarea{
-  padding-top: 10px;
-  resize: none;
-}
-.contact .right form .button-area{
-  display: flex;
-  align-items: center;
-}
-.right form .button-area button{
-  color: #fff;
-  display: block;
-  width: 160px!important;
-  height: 45px;
-  outline: none;
-  font-size: 18px;
-  font-weight: 500;
-  border-radius: 6px;
-  cursor: pointer;
-  flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
-  transition: all 0.3s ease;
-}
-.right form .button-area button:hover{
-  color: crimson;
-  background: none;
-}
+
+
+
 /* footer section styling */
 footer{
     background: #111;
@@ -575,14 +521,70 @@ footer{
     color: #fff;
     text-align: center;
 }
-footer span a{
-    color: crimson;
-    text-decoration: none;
-}
+
 footer span a:hover{
     text-decoration: underline;
+    text-decoration: blue;
+}
+/***/
+footer-distributed{
+	background-color: #2c292f;
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	padding: 50px 50px 60px 50px;
+	margin-top: 80px;
 }
 
+.footer-distributed .footer-left
+{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 30%;
+}
+
+.footer-distributed h3{
+	color:  #ffffff;
+	margin: 0;
+}
+
+/* The company logo */
+
+.footer-distributed .footer-left img{
+	width: 30%;
+}
+
+.footer-distributed h3 span{
+	color:  #e0ac1c;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+
+/**/
 
 /* responsive media query start */
 @media (max-width: 1104px) {
